Use ryu for SSTR to avoid allocations

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -89,9 +89,11 @@ include_directories(lib/gzstream)
 include_directories(lib/alp)
 include_directories(lib/cacode)
 include_directories(lib/ksw2)
+include_directories(lib/ryu)
 add_subdirectory(lib/cacode)
 add_subdirectory(lib/alp)
 add_subdirectory(lib/ksw2)
+add_subdirectory(lib/ryu)
 add_subdirectory(data)
 add_subdirectory(src)
 if (NOT FRAMEWORK_ONLY AND INSTALL_UTIL)
