--- a/data/workflow/CMakeLists.txt
+++ b/data/workflow/CMakeLists.txt
@@ -15,13 +15,14 @@ set(GENERATED_WORKFLOWS
         workflow/createindex.sh
         workflow/createtaxdb.sh
         workflow/translated_search.sh
-        workflow/taxonomy.sh
         workflow/taxpercontig.sh
         workflow/multihitdb.sh
         workflow/multihitsearch.sh
         workflow/enrich.sh
         workflow/blastn.sh
         workflow/searchslicedtargetprofile.sh
+        workflow/lcaapprox2blca.sh
+        workflow/lcatophit.sh
         workflow/linsearch.sh
         workflow/databases.sh
         workflow/nucleotide_clustering.sh
