--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -33,7 +33,8 @@ jobs:
           HEREDOC
           sudo apt-get update
           sudo apt-get -y install crossbuild-essential-$ARCH zlib1g-dev:$ARCH libbz2-dev:$ARCH
-          cat /var/log/dpkg.log /var/apt/*
+          sudo cat /var/log/dpkg.log /var/log/apt/*
+          sudo dpkg --configure -a
         displayName: Install Toolchain
       - script: |
           mkdir build && cd build
