--- a/.github/workflows/userguide.yml
+++ b/.github/workflows/userguide.yml
@@ -10,19 +10,29 @@ jobs:
       - uses: actions/checkout@v2
         with:
           repository: ${{ github.repository }}.wiki
-      - name: Install dependencies
-        run: sudo apt install pandoc libgraphite2-3
       - name: Cache
         uses: actions/cache@v2.1.3
+        id: cache
         with:
-          path: ~/.cache/Tectonic/
-          key: ${{ runner.os }}-${{ env.cache-name }}-tectonic-0.3.3
-      - name: Download tectonic
-        run: wget -qO- https://github.com/tectonic-typesetting/tectonic/releases/download/tectonic%400.3.3/tectonic-0.3.3-x86_64-unknown-linux-gnu.tar.gz | tar xzvf - tectonic
+          path: |
+            ~/.cache/Tectonic/
+            /usr/local/bin/tectonic
+            /usr/local/bin/pandoc
+            /lib/x86_64-linux-gnu/libgraphite2.so.3
+            /usr/lib/x86_64-linux-gnu/libgraphite2.so.3.2.1
+          key: ${{ runner.os }}-${{ env.cache-name }}-pandoc-2.11.3.1-tectonic-0.3.3
+      - name: Install dependencies
+        if: steps.cache.outputs.cache-hit != 'true'
+        run: sudo apt install libgraphite2-3
+      - name: Download pandoc+tectonic
+        if: steps.cache.outputs.cache-hit != 'true'
+        run: |
+          wget -qO- https://github.com/tectonic-typesetting/tectonic/releases/download/tectonic%400.3.3/tectonic-0.3.3-x86_64-unknown-linux-gnu.tar.gz | tar xzvf - tectonic
+          wget -qO- https://github.com/jgm/pandoc/releases/download/2.11.3.1/pandoc-2.11.3.1-linux-amd64.tar.gz | tar --strip-components=2 -xzvf - pandoc-2.11.3.1/bin/pandoc
+          sudo mv -f pandoc tectonic /usr/local/bin
       - name: Build PDF
         run: |
-          pandoc Home.md -s -t latex | ./tectonic -
-          mv texput.pdf userguide.pdf
+          pandoc Home.md -s --pdf-engine tectonic -o userguide.pdf
       - name: Upload PDF artifact
         uses: actions/upload-artifact@v2
         with:
