--- a/.github/workflows/userguide.yml
+++ b/.github/workflows/userguide.yml
@@ -11,21 +11,12 @@ jobs:
         with:
           repository: ${{ github.repository }}.wiki
       - name: Cache
-        uses: actions/cache@v2.1.3
-        id: cache
+        uses: actions/cache@v2
         with:
           path: |
             ~/.cache/Tectonic/
-            /usr/local/bin/tectonic
-            /usr/local/bin/pandoc
-            /lib/x86_64-linux-gnu/libgraphite2.so.3
-            /usr/lib/x86_64-linux-gnu/libgraphite2.so.3.2.1
-          key: ${{ runner.os }}-${{ env.cache-name }}-pandoc-2.11.3.1-tectonic-0.3.3
-      - name: Install dependencies
-        if: steps.cache.outputs.cache-hit != 'true'
-        run: sudo apt install libgraphite2-3
+          key: ${{ runner.os }}-${{ env.cache-name }}-tectonic
       - name: Download pandoc+tectonic
-        if: steps.cache.outputs.cache-hit != 'true'
         run: |
           wget -qO- https://github.com/tectonic-typesetting/tectonic/releases/download/tectonic%400.3.3/tectonic-0.3.3-x86_64-unknown-linux-gnu.tar.gz | tar xzvf - tectonic
           wget -qO- https://github.com/jgm/pandoc/releases/download/2.11.3.1/pandoc-2.11.3.1-linux-amd64.tar.gz | tar --strip-components=2 -xzvf - pandoc-2.11.3.1/bin/pandoc
