--- a/.github/workflows/userguide.yml
+++ b/.github/workflows/userguide.yml
@@ -24,8 +24,22 @@ jobs:
       - name: Build PDF
         run: |
           pandoc Home.md -s --pdf-engine tectonic -o userguide.pdf
-      - name: Upload PDF artifact
-        uses: actions/upload-artifact@v2
+      - name: Create Release
+        id: create_release
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          name: userguide
-          path: userguide.pdf
+          tag_name: userguide
+          release_name: User Guide
+          draft: false
+          prerelease: true
+      - name: Upload Release Asset
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: ./userguide.pdf
+          asset_name: userguide.pdf
+          asset_content_type: application/pdf
