--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -138,10 +138,10 @@ else ()
     message("-- OMPTL sorting fallback")
 endif ()
 
-target_link_libraries(mmseqs-framework tinyexpr ${ZSTD_LIBRARIES} microtar tantan block_aligner_c)
-# if (CYGWIN)
-#     target_link_libraries(mmseqs-framework nedmalloc)
-# endif ()
+target_link_libraries(mmseqs-framework exprjit ${ZSTD_LIBRARIES} microtar tantan block_aligner_c)
+if (CYGWIN)
+    target_link_libraries(mmseqs-framework nedmalloc)
+endif ()
 
 if (EMSCRIPTEN)
     target_compile_definitions(mmseqs-framework PUBLIC -DHAVE_ZLIB=1 -DHAVE_BZLIB=1)
