Move submat lambda code to its own hidden module

--- a/src/util/CMakeLists.txt
+++ b/src/util/CMakeLists.txt
@@ -3,6 +3,7 @@ set(util_source_files
         util/alignbykmer.cpp
         util/appenddbtoindex.cpp
         util/apply.cpp
+        util/calculatelambda.cpp
         util/clusthash.cpp
         util/compress.cpp
         util/convert2fasta.cpp
